# Cloud-Haskell-Game

./: README.md
client/: Makefile  elm-package.json
client-skeleton/: .gitignore  Makefile  elm-package.json
client-skeleton/src/: App.elm  State.elm  Types.elm  View.elm
client/src/: State.elm  Types.elm  View.elm
client/src/View/: Scene.elm
client/tests/: elm-package.json
server/: HLint.hs  LICENSE  README.md  cloud-haskell-game.cabal  package.yaml  stack.yaml
server/app/: Main.hs
server/src/: EchoGame.hs  ElfPrison.hs  Generators.hs  Lib.hs  Position.hs  PresentDrop.hs
server/src/Network/: GameEngine.hs
