name:                cloud-haskell-game
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/krisajenkins/cloud-haskell-game#readme
license:             BSD3
license-file:        LICENSE
author:              Kris Jenkins
maintainer:          krisajenkins@gmail.com
copyright:           2016 Kris Jenkins
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.GameEngine
                     , EchoGame
                     , PresentDrop
  build-depends:       base >= 4.7 && < 5
                     , MonadRandom
                     , aeson
                     , aeson-casing
                     , binary
                     , time
                     , wai-app-static
                     , bytestring
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , distributed-process-supervisor
                     , network-transport-inmemory
                     , network-transport-tcp
                     , containers
                     , lens
                     , megaparsec
                     , monad-logger
                     , monad-loops
                     , mtl
                     , random
                     , resourcet
                     , stm
                     , text
                     , formatting
                     , transformers
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
                     , yaml
  default-language:    Haskell2010

executable cloud-haskell-game
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cloud-haskell-game
                     , aeson
                     , random
  default-language:    Haskell2010

test-suite cloud-haskell-game-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cloud-haskell-game
                     , hspec
                     , hspec-core
                     , QuickCheck
                     , quickcheck-instances
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krisajenkins/cloud-haskell-game
